implement CheckBackend which just calls the REST API. Also some API improvements
