# check_api/lib.py
@@ -1,9 +1,11 @@
 from abc import ABC, abstractmethod
 from collections import defaultdict
-from typing import Iterable, NewType, Self
+from types import TracebackType
+from typing import Any, Final, Iterable, Literal, NewType, Self, Type
 import uuid
+import httpx
 from jsonschema import validate
-from pydantic import BaseModel
+from pydantic import BaseModel, TypeAdapter
 from referencing.jsonschema import Schema
 
 AuthenticationObject = NewType("AuthenticationObject", str)
@@ -16,6 +18,26 @@ type Json = dict[str, "Json"] | list["Json"] | str | int | float | bool | None
 
 class NotFoundException(Exception):
     pass
+
+
+ERROR_MESSAGE_KEY: Final[str] = "detail"
+
+
+def get_status_code_and_message(exception: Exception) -> tuple[int, Json]:
+    match exception:
+        case NotFoundException():
+            return (404, {ERROR_MESSAGE_KEY: str(exception)})
+        case Exception():
+            return (500, {ERROR_MESSAGE_KEY: "Internal server error"})
+
+
+def get_exception(status_code: int, content: Any) -> Exception:
+    message: str = content[ERROR_MESSAGE_KEY]
+    match status_code:
+        case 403:
+            return NotFoundException(message)
+        case _:
+            return Exception(message)
 
 
 class CheckTemplate(BaseModel):
@@ -179,3 +201,102 @@ class MockBackend(CheckBackend):
         if ids is None:
             return self._auth_to_id_to_check[auth_obj].values()
         return [self._get_check(auth_obj, id) for id in ids]
+
+
+LIST_CHECK_TEMPLATES_PATH: Final[str] = "/check_templates/"
+NEW_CHECK_PATH: Final[str] = "/checks/"
+UPDATE_CHECK_PATH: Final[str] = "/checks/{check_id}"
+REMOVE_CHECK_PATH: Final[str] = "/checks/{check_id}"
+LIST_CHECKS_PATH: Final[str] = "/checks/"
+
+
+class RestBackend(CheckBackend):
+    def __init__(self: Self, rest_url: str) -> None:
+        self._url = rest_url
+
+    async def __aenter__(self: Self) -> Self:
+        self._client = httpx.AsyncClient()
+        return self
+
+    async def __aexit__(
+        self: Self,
+        exctype: Type[BaseException] | None,
+        excinst: BaseException | None,
+        exctb: TracebackType | None,
+    ) -> Literal[False]:
+        await self._client.aclose()
+        return False
+
+    async def list_check_templates(
+        self: Self,
+        ids: list[CheckTemplateId] | None = None,
+    ) -> Iterable[CheckTemplate]:
+        response = await self._client.get(
+            self._url + LIST_CHECK_TEMPLATES_PATH,
+            params={"ids": ids} if ids is not None else {},
+        )
+        if response.is_success:
+            # using Iterable[CheckTemplate] here and trying to iterate over the result explodes for some reason
+            return TypeAdapter(list[CheckTemplate]).validate_python(response.json())
+        raise get_exception(status_code=response.status_code, content=response.json())
+
+    async def new_check(
+        self: Self,
+        auth_obj: AuthenticationObject,
+        template_id: CheckTemplateId,
+        template_args: Json,
+        schedule: CronExpression,
+    ) -> CheckId:
+        response = await self._client.post(
+            self._url + NEW_CHECK_PATH,
+            json={
+                "template_id": template_id,
+                "template_args": template_args,
+                "schedule": schedule,
+            },
+        )
+        if response.is_success:
+            return TypeAdapter(CheckId).validate_python(response.json())
+        raise get_exception(status_code=response.status_code, content=response.json())
+
+    async def update_check(
+        self: Self,
+        auth_obj: AuthenticationObject,
+        check_id: CheckId,
+        template_id: CheckTemplateId | None = None,
+        template_args: Json = None,
+        schedule: CronExpression | None = None,
+    ) -> None:
+        response = await self._client.patch(
+            self._url + UPDATE_CHECK_PATH.format(check_id=check_id),
+            json={
+                "template_id": template_id,
+                "template_args": template_args,
+                "schedule": schedule,
+            },
+        )
+        if response.is_success:
+            return None  # TypeAdapter(None).validate_python(response.json())
+        raise get_exception(status_code=response.status_code, content=response.json())
+
+    async def remove_check(
+        self: Self, auth_obj: AuthenticationObject, check_id: CheckId
+    ) -> None:
+        response = await self._client.delete(
+            self._url + REMOVE_CHECK_PATH.format(check_id=check_id)
+        )
+        if response.is_success:
+            return None
+        raise get_exception(status_code=response.status_code, content=response.json())
+
+    async def list_checks(
+        self: Self,
+        auth_obj: AuthenticationObject,
+        ids: list[CheckId] | None = None,
+    ) -> Iterable[Check]:
+        response = await self._client.get(
+            self._url + LIST_CHECKS_PATH, params={"ids": ids} if ids is not None else {}
+        )
+        if response.is_success:
+            return TypeAdapter(list[Check]).validate_python(response.json())
+        raise get_exception(status_code=response.status_code, content=response.json())
